add directions demo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 !["Esri"](img/esri.png "background")
 
 # The Data!
+
+!["Austin Open Data"](img/data.png "background")
+
 [Austin Open Data](https://data.austintexas.gov/)
 
 # Lots of Data!
@@ -20,7 +23,15 @@
 * [Bike Rack Requests](https://data.austintexas.gov/Transportation/Bicycle-Rack-Requests/5tx2-pk4n)
 * And More&hellip;
 
-# Put It On A Map!
+# Put Data On Maps!
+* (ArcGIS SDK for Javascript)[http://help.arcgis.com/en/webapi/javascript/arcgis/]
+* (Leaflet)[http://leafletjs.com/]
+
+!["Example 1"](img/example1.png "background")
+
+!["Example 2"](img/data.png "background")
+
+# Sample Code
 * [ArcGIS](/samples/arcgis/map.html)
 * [Leaflet](/samples/leaflet/map.html)
 
