--- a/samples/arcgis/directions.html
+++ b/samples/arcgis/directions.html
@@ -1,8 +1,86 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>ArcGIS Directions</title>
+
+    <link rel="stylesheet" href="http://serverapi.arcgisonline.com/jsapi/arcgis/3.3/js/esri/css/esri.css">
+
+    <script src="http://serverapi.arcgisonline.com/jsapi/arcgis/3.3/"></script>
+
+    <style>
+      html, body, #map {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
+    <div id="map"></div>
+    <script>
+      dojo.require("esri.map");
+      dojo.require("esri.tasks.route");
+
+      var map, routeTask, routeParams, stopSymbol, routeSymbol, lastStop;
+
+      function init() {
+        // Make a new map you can set which basemap which different keys like "streets" , "satellite" , "hybrid", "topo", "gray", "oceans", "national-geographic", "osm"
+        map = new esri.Map("map", {
+          basemap: "topo",
+          center: [-97.741531, 30.279117], // [long, lat] or [x,y]
+          zoom: 14 // 14 is about a city. 2 is the world
+        });
+
+        // when you click on the map run the addStop function
+        map.on("click", addStop);
+
+        // create a new route task to talk to the routing api
+        routeTask = new esri.tasks.RouteTask("http://tasks.arcgisonline.com/ArcGIS/rest/services/NetworkAnalysis/ESRI_Route_NA/NAServer/Route");
+
+        //setup the route parameters object a feature set object
+        routeParams = new esri.tasks.RouteParameters();
+        routeParams.stops = new esri.tasks.FeatureSet();
+        routeParams.returnDirections = true;
+        console.log(routeParams);
+
+        //define the graphics used to display the route
+        stopSymbol = new esri.symbol.SimpleMarkerSymbol().setStyle(esri.symbol.SimpleMarkerSymbol.STYLE_CROSS).setSize(15);
+        stopSymbol.outline.setWidth(4);
+        routeSymbol = new esri.symbol.SimpleLineSymbol().setColor(new dojo.Color([0,0,255,0.5])).setWidth(5);
+      }
+
+      //Adds a graphic when the user clicks the map. If 2 or more points exist, route is solved.
+      function addStop(evt) {
+        var stop = map.graphics.add(new esri.Graphic(evt.mapPoint, stopSymbol));
+        routeParams.stops.features.push(stop);
+
+        // if we ahve 2 stops "solve" the route
+        if(routeParams.stops.features.length >= 2) {
+          // the ArcGIS libarey uses deferreds so you can pass your callback in the then() method
+          routeTask.solve(routeParams).then(showRoute);
+          lastStop = routeParams.stops.features.splice(0, 1)[0];
+        }
+      }
+
+      //Adds the solved route to the map as a graphic
+      function showRoute(solveResult) {
+        map.graphics.add(solveResult.routeResults[0].route.setSymbol(routeSymbol));
+        for (var i = solveResult.routeResults[0].directions.features.length - 1; i >= 0; i--) {
+          console.log(solveResult.routeResults[0].directions.features[i].attributes.text);
+        };
+      }
+
+      //Displays any error returned by the Route Task
+      function errorHandler(err) {
+        alert("An error occured\n" + err.message + "\n" + err.details.join("\n"));
+
+        routeParams.stops.features.splice(0, 0, lastStop);
+        map.graphics.remove(routeParams.stops.features.splice(1, 1)[0]);
+      }
+
+      // run the inti function on DOM ready
+      dojo.ready(init);
+    </script>
   </body>
 </html>
