--- a/samples/arcgis/directions.html
+++ b/samples/arcgis/directions.html
@@ -67,7 +67,7 @@
       //Adds the solved route to the map as a graphic
       function showRoute(solveResult) {
         map.graphics.add(solveResult.routeResults[0].route.setSymbol(routeSymbol));
-        for (var i = solveResult.routeResults[0].directions.features.length - 1; i >= 0; i--) {
+        for (var i = 0; i < solveResult.routeResults[0].directions.features.length; i++) {
           console.log(solveResult.routeResults[0].directions.features[i].attributes.text);
         };
       }
