add geocoder demos

--- a/index.html
+++ b/index.html
@@ -24,20 +24,30 @@
 * And More&hellip;
 
 # Put Data On Maps!
-* (ArcGIS SDK for Javascript)[http://help.arcgis.com/en/webapi/javascript/arcgis/]
-* (Leaflet)[http://leafletjs.com/]
 
 !["Example 1"](img/example1.png "background")
 
-!["Example 2"](img/data.png "background")
+!["Example 2"](img/example2.png "background")
 
-# Sample Code
-* [ArcGIS](/samples/arcgis/map.html)
+# Mapping Sample Code!
+* [ArcGIS Maps](/samples/arcgis/map.html)
 * [Leaflet](/samples/leaflet/map.html)
+
+# Geocode Addresses
+* [ArcGIS](/samples/arcgis/geocode.html)
+* [jQuery and Leaflet](/samples/arcgis/geocode.html)
 
 # Get Some Directions!
 * [ArcGIS](/samples/arcgis/directions.html)
 * [jQuery and Leaflet](/samples/arcgis/directions.html)
+
+# Other Neat Stuff
+
+## Terraformer
+Convert data between WKT,<br>ArcGIS JSON, and GeoJSON. [Github](https://github.com/esri/Terraformer)
+
+# Story Maps
+Templates from ESRI for displaying<br> configurable maps and data services. [Story Maps](http://storymaps.esri.com/home/)
 
 # Thanks!
 
