--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 [Austin Open Data](https://data.austintexas.gov/)
 
 # Lots of Data!
-* [Unclaimed Property](https://data.austintexas.gov/Financial/Unclaimed-Property/h3i4-5e5v)
 * [Restaurant Inspection Scores](https://data.austintexas.gov/dataset/Restaurant-Inspection-Scores/ecmv-9xxi)
 * [Water Quality](https://data.austintexas.gov/Environmental/Water-Quality-Sampling-Data/5tye-7ray)
 * [Bike Rack Requests](https://data.austintexas.gov/Transportation/Bicycle-Rack-Requests/5tx2-pk4n)
+* [Dangerous Dogs](https://data.austintexas.gov/Public-Safety/Declared-Dangerous-Dogs/ykw4-j3aj)
+* [Court Violations](https://data.austintexas.gov/Public-Safety/Municipal-Court-Violation-Location/8jyt-x94k)
 * And More&hellip;
 
 # Put Data On Maps!
