--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
 !["Example 2"](img/example2.png "background")
 
 # Mapping Sample Code!
-* [ArcGIS Maps](/samples/arcgis/map.html)
-* [Leaflet](/samples/leaflet/map.html)
+* [ArcGIS Maps](samples/arcgis/map.html)
+* [Leaflet](samples/leaflet/map.html)
 
 # Geocode Addresses
-* [ArcGIS](/samples/arcgis/geocode.html)
-* [jQuery and Leaflet](/samples/arcgis/geocode.html)
+* [ArcGIS](samples/arcgis/geocode.html)
+* [jQuery and Leaflet](samples/arcgis/geocode.html)
 
 # Get Some Directions!
-* [ArcGIS](/samples/arcgis/directions.html)
-* [jQuery and Leaflet](/samples/arcgis/directions.html)
+* [ArcGIS](samples/arcgis/directions.html)
+* [jQuery and Leaflet](samples/arcgis/directions.html)
 
 # Other Neat Stuff
 
@@ -58,7 +58,6 @@ Templates from ESRI for displaying<br> configurable maps and data services. [Sto
   var slides = document.body.innerHTML.split("\n\n");
   document.body.innerHTML = "";
   for(var i=0; i<slides.length-1; i++) {
-    console.log(i);
     document.body.innerHTML += "<div>" + converter.makeHtml(slides[i]) + "</div>";
   }
   </script>
